--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "express": "~4.3.0",
+    "express-session": "*",
+    "cookie-parser": "*",
     "body-parser": "~1.0.0",
     "monk": "0.8.1",
     "bcrypt": "~0.7.8",
