--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "cookie-parser": "*",
     "body-parser": "~1.0.0",
     "monk": "0.8.1",
-    "bcrypt": "~0.7.8",
+    "bcrypt": "*",
     "ejs": "~1.0.0"
   }
 }
